@@ -602,6 +602,8 @@ int nmap_main(int argc, char *argv[]) {
       {"script_updatedb", no_argument, 0, 0},
       {"script-args",required_argument,0,0},
       {"script_args",required_argument,0,0},
+      {"script-help",required_argument,0,0},
+      {"script_help",required_argument,0,0},
 #endif
       {"ip_options", required_argument, 0, 0},
       {"ip-options", required_argument, 0, 0},
@@ -647,6 +649,9 @@ int nmap_main(int argc, char *argv[]) {
               o.scripttrace = 1;
       } else if (optcmp(long_options[option_index].name, "script-updatedb") == 0){
               o.scriptupdatedb = 1;
+      } else if (optcmp(long_options[option_index].name, "script-help") == 0){
+              o.scripthelp = true;
+              o.chooseScripts(optarg);
       } else
 #endif
       if (optcmp(long_options[option_index].name, "max-os-tries") == 0) {
@@ -1314,6 +1319,11 @@ int nmap_main(int argc, char *argv[]) {
   }
   if (iflist) {
     print_iflist();
+    exit(0);
+  }
+  if (o.scripthelp) {
+    /* Special-case open_nse for --script-help only. */
+    open_nse();
     exit(0);
   }
 
